# miniglog

./: .gitignore  CMakeLists.txt  CMakeLists.txt~
glog/: logging.h~
miniglog/: logging.h
